# my-order

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 29a31d541385_initial_migration.py
backend/app/: database.py  main.py
backend/app/api/: api.py
backend/app/api/endpoints/: auth.py  settings.py  suppliers.py
backend/app/core/: __init__.py  auth.py  config.py  deps.py  security.py
backend/app/crud/: __init__.py  customer.py  item.py  order.py  orders.py  supplier.py  user.py
backend/app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
backend/app/db/migrations/: create_tables.sql
backend/app/integration/: __init__.py  db_connector.py  excel_connector.py
backend/app/models/: __init__.py  customer.py  inbound.py  item.py  order.py  settings.py  supplier.py  user.py
backend/app/routers/: access_integration.py  customers.py  db_integration.py  excel_integration.py  items.py  orders.py  users.py
backend/app/schemas/: __init__.py  customer.py  item.py  order.py  settings.py  supplier.py  user.py
docker/api/: Dockerfile
docker/backend/: Dockerfile
docker/nginx/: default.conf
docker/web/: Dockerfile
frontend/: next.config.js  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/customers/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/hooks/: useAuth.ts
frontend/app/lib/: auth.ts  axios.ts
frontend/app/orders/: page.tsx
nginx/conf.d/: default.conf
(+60 files in other folders)
